# BeSTspeak

./: README.md
misc/: audapter.man  bst_outputs.txt  bst_voice_params.txt  fun_prompt.txt  readme.txt
misc/(old code)/: readme.txt
misc/(old code)/bst_debug/: BST phonemes list.txt  bst_debug.py  bst_debug.py.old
misc/(old code)/bst_speak_1/: command line help.txt  phonemes list.txt  speech commands.txt
misc/(old code)/bst_speak_1/misc/: bst_icon.psd  yt_desc.txt
misc/(old code)/bst_speak_1/src/: BST DLL Functions.txt  bestspeak.py  bestspeak_1.py  bst_speak_test.py
misc/(old code)/bst_speak_2/: BST.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  bst_speak.cpp  bst_speak.dsp  bst_speak.dsw  bst_speak.ncb  bst_speak.opt  bst_speak.plg
misc/(old code)/bst_speak_2/Debug/: bst_speak.pch  vc60.idb
misc/BstSpeech-sapi/: .gitignore  CMakeLists.txt  README.md  build_all.bat
misc/BstSpeech-sapi/installer/: innosetup_code.iss  post_process_iss.cmake
misc/BstSpeech-sapi/src/: IEnumSpObjectTokensImpl.cpp  IEnumSpObjectTokensImpl.hpp  ISpDataKeyImpl.cpp  ISpDataKeyImpl.hpp  ISpTTSEngineImpl.cpp  ISpTTSEngineImpl.hpp  b32_wrapper.cpp  b32_wrapper.h  bestspeech_server.cpp  com.cpp  com.hpp  debug_log.h  pipe_client.cpp  pipe_client.h  pipe_protocol.h  registry.cpp  registry.hpp  sapi_main.cpp  utils.hpp  voice_attributes.hpp  voice_token.cpp  voice_token.hpp
misc/icons/: BeSTspeak.ifx  BeSTspeak_icon_final.psd  BeSTspeak_icon_final_low_color.psd  BeSTspeak_icon_master.psd
nvda/: BestSpeak.nvda-addon  README.md  bestspeech_2025.5.nvda-addon
src/: BST.h  BeSTspeak.aps  BeSTspeak.clw  BeSTspeak.cpp  BeSTspeak.dep  BeSTspeak.dsp  BeSTspeak.dsw  BeSTspeak.h  BeSTspeak.mak  BeSTspeak.ncb  BeSTspeak.opt  BeSTspeak.plg  BeSTspeak.rc  ReadMe.txt  StdAfx.cpp  resource.h
src/Release/: BeSTspeak.pch  BeSTspeak.res  vc60.idb
v2/: Makefile  README.md  bst_spk.cpp
